--- a/equator.html
+++ b/equator.html
@@ -1,5 +1,7 @@
 ---
 layout: iframe
 ---
-<h4>Which reporting guidelines are relevant to my work?</h4>
-<p>This tool will help you find applicable reporting guidelines from the EQUATOR library. These guidelines, and their accompanying checklists, will help you make sure your work is reported completely and transparently.</p>
+<h4>Everyone can forget things - have you?</h4>
+<p>Scientist frequently forget to report details about their study that are important to readers. This can delay publication and stop your work being used, cited or replicated.</p>
+<p>To help you, experts have made checklists that set out the most important things other people need to know about your work.</p>
+<p>There are different checklists for different types of study design. This tool will help you find the right checklist for your work. or you can search the <a href='' target='_blank'>EQUATOR library</a> directly.</p>
