Fixed Back button link

--- a/question0.html
+++ b/question0.html
@@ -5,6 +5,6 @@ action: question-action.html
 title: Everyone can forget things - have you?
 yesResult: question1
 noResult: question4
-prevResult: equatorNew
+prevResult: main
 ---
 <p>Was the research on humans?</p>
