Brought up to date with latest spreadsheet changes

--- a/arrive.html
+++ b/arrive.html
@@ -4,9 +4,9 @@ information: answer-information.html
 action: answer-action.html
 title: The ARRIVE guidelines will be most useful to you
 checkList: ARRIVE
-checkListLink: http://www.test1.com
-moreInfoLink: http://www.test2.com
-extensionsLink: http://www.test3.com
+additional: If you conducted veterinary research, or research on livestock rather than comparative research on laboratory animals, the ARRIVE guidelines may not be applicable.
+checkListLink: http://www.nc3rs.org.uk/arrive-guidelines
+moreInfoLink: http://www.equator-network.org/reporting-guidelines/improving-bioscience-research-reporting-the-arrive-guidelines-for-reporting-animal-research/
 prevResult: question3
 ---
 <p>You may still find useful guidelines by searching the full EQUATOR library which covers 250+ study designs.</p>
