--- a/care.html
+++ b/care.html
@@ -4,9 +4,8 @@ information: answer-information.html
 action: answer-action.html
 title: The CARE guidelines will be most useful to you
 checkList: CARE
-checkListLink: http://www.test1.com
-moreInfoLink: http://www.test2.com
-extensionsLink: http://www.test3.com
+checkListLink: http://www.care-statement.org/downloads/CAREchecklist-English.docx
+moreInfoLink: http://www.equator-network.org/reporting-guidelines/care/
 prevResult: question3
 ---
 <p>You may still find useful guidelines by searching the full EQUATOR library which covers 250+ study designs.</p>
