--- a/library4.html
+++ b/library4.html
@@ -7,4 +7,4 @@ yesResult: arrive
 noResult: library
 prevResult: question4
 ---
-<p>None of the most popular checklists are appropriate for your study design, but you may still find useful guidelines by searching the full EQUATOR library, which covers 250+ study designs.</p>
+<p>None of the most popular checklists are appropriate for your study design, but you may still find useful guidelines by searching the full <a href='http://www.equator-network.org/reporting-guidelines/' target="_blank">EQUATOR library<a>, which covers 250+ study designs.</p>
