--- a/question2.html
+++ b/question2.html
@@ -2,9 +2,9 @@
 layout: wizard
 information: start-information.html
 action: question-action.html
-title: Everyone can forget things - have you?
+title: Tell us about your work
 yesResult: question3
 noResult: question7
 prevResult: question1
 ---
-<p>Did you pool the results of previous studies (a review)?</p>
+<p>Did you combine and analyse (review) the results of previous studies?</p>
