--- a/question3.html
+++ b/question3.html
@@ -2,9 +2,9 @@
 layout: wizard
 information: start-information.html
 action: question-action.html
-title: Everyone can forget things - have you?
+title: Tell us about your work
 yesResult: moose
 noResult: prisma
 prevResult: question2
 ---
-<p>Is it a review of observational (or non comparative) studies?</p>
+<p>Is it a review of observational (cohort, case-control, or cross-sectional) studies?</p>
