--- a/question4.html
+++ b/question4.html
@@ -2,9 +2,9 @@
 layout: wizard
 information: start-information.html
 action: question-action.html
-title: Everyone can forget things - have you?
+title: Tell us about your work
 yesResult: arrive
 noResult: library4
 prevResult: question0
 ---
-<p>Was the research on live animals (in vivo)?</p>
+<p>Was your research on animals in the lab?</p>
