--- a/question6.html
+++ b/question6.html
@@ -2,9 +2,9 @@
 layout: wizard
 information: start-information.html
 action: question-action.html
-title: Everyone can forget things - have you?
+title: Tell us about your work
 yesResult: care
 noResult: srqr
 prevResult: question5
 ---
-<p>Do you describe a clinical case or a series of cases?</p>
+<p>Did you study a clinical case, or series of cases?</p>
