--- a/question7.html
+++ b/question7.html
@@ -2,9 +2,9 @@
 layout: wizard
 information: start-information.html
 action: question-action.html
-title: Everyone can forget things - have you?
+title: Tell us about your work
 yesResult: consort
 noResult: question8
 prevResult: question2
 ---
-<p>Did the study compare two or more groups who have been randomly assigned a therapeutic or a control treatment / placebo?</p>
+<p>Was your study a randomized trial comparing two or more health interventions?</p>
