--- a/question8.html
+++ b/question8.html
@@ -2,9 +2,9 @@
 layout: wizard
 information: start-information.html
 action: question-action.html
-title: Everyone can forget things - have you?
+title: Tell us about your work
 yesResult: strobe
 noResult: question9
 prevResult: question7
 ---
-<p>Did the research observe the effect of exposure to a risk factor or preventative factor on one or more groups of people?</p>
+<p>Did your study explore the relationship between exposure to risk or protective factors and outcomes?</p>
