--- a/question9.html
+++ b/question9.html
@@ -2,9 +2,9 @@
 layout: wizard
 information: start-information.html
 action: question-action.html
-title: Everyone can forget things - have you?
+title: Tell us about your work
 yesResult: stard
 noResult: question10
 prevResult: question8
 ---
-<p>Did the study compare the accuracy of a diagnostic test against a reference standard in two or more groups of people?</p>
+<p>Did you compare the accuracy of a new or alternative diagnostic test against an established one (reference standard)?</p>
