--- a/tripod.html
+++ b/tripod.html
@@ -4,9 +4,8 @@ information: answer-information.html
 action: answer-action.html
 title: The TRIPOD guidelines will be most useful to you
 checkList: TRIPOD
-checkListLink: http://www.test1.com
-moreInfoLink: http://www.test2.com
-extensionsLink: http://www.test3.com
+checkListLink: http://www.tripod-statement.org/Portals/0/Documents/TRIPOD/Tripod%20checklist/Checklist_v2_090215.docx
+moreInfoLink: http://www.equator-network.org/reporting-guidelines/tripod-statement/
 prevResult: question3
 ---
 <p>You may still find useful guidelines by searching the full EQUATOR library which covers 250+ study designs.</p>
