--- a/library.html
+++ b/library.html
@@ -3,6 +3,6 @@ layout: wizard
 information: library-information.html
 action: answer-action.html
 title: You might find useful guidelines in the EQUATOR library
-prevResult: question0
+prevResult: main
 ---
 <p>You may still find useful guidelines by searching the full EQUATOR library which covers 250+ study designs.</p>
