--- a/moose.html
+++ b/moose.html
@@ -4,9 +4,9 @@ information: answer-information.html
 action: answer-action.html
 title: The MOOSE guidelines will be most useful to you
 checkList: MOOSE
-checkListLink: http://www.test1.com
-moreInfoLink: http://www.test2.com
-extensionsLink: http://www.test3.com
+checkListLink:
+moreInfoLink: http://www.equator-network.org/reporting-guidelines/meta-analysis-of-observational-studies-in-epidemiology-a-proposal-for-reporting-meta-analysis-of-observational-studies-in-epidemiology-moose-group/
+extensionsLink: 
 prevResult: question3
 ---
 <p>You may still find useful guidelines by searching the full EQUATOR library which covers 250+ study designs.</p>
