--- a/remark.html
+++ b/remark.html
@@ -4,9 +4,8 @@ information: answer-information.html
 action: answer-action.html
 title: The REMARK guidelines will be most useful to you
 checkList: REMARK
-checkListLink: http://www.test1.com
-moreInfoLink: http://www.test2.com
-extensionsLink: http://www.test3.com
+checkListLink:
+moreInfoLink: http://www.equator-network.org/reporting-guidelines/reporting-recommendations-for-tumour-marker-prognostic-studies-remark/
 prevResult: question3
 ---
 <p>You may still find useful guidelines by searching the full EQUATOR library which covers 250+ study designs.</p>
