Fixed download button

--- a/srqr.html
+++ b/srqr.html
@@ -4,6 +4,7 @@ information: answer-information.html
 action: answer-action.html
 title: The SRQR guidelines will be most useful to you
 checkList: SRQR
+checkListLink: http://www.equator-network.org/reporting-guidelines/srqr/
 moreInfoLink: http://www.equator-network.org/reporting-guidelines/srqr/
 prevResult: question3
 ---
