--- a/remark.html
+++ b/remark.html
@@ -4,7 +4,7 @@ information: answer-information.html
 action: answer-action.html
 title: The REMARK guidelines will be most useful to you
 checkList: REMARK
-checkListLink:
+checkListLink: http://www.equator-network.org/reporting-guidelines/reporting-recommendations-for-tumour-marker-prognostic-studies-remark/
 moreInfoLink: http://www.equator-network.org/reporting-guidelines/reporting-recommendations-for-tumour-marker-prognostic-studies-remark/
 prevResult: question3
 ---
