--- a/entreq.html
+++ b/entreq.html
@@ -4,6 +4,7 @@ information: answer-information.html
 action: answer-action.html
 title: The ENTREQ guidelines will be most useful to you
 checkList: ENTREQ
+checkListLink: http://www.equator-network.org/reporting-guidelines/entreq/
 moreInfoLink: http://www.equator-network.org/reporting-guidelines/entreq/
 prevResult: question3
 ---
