Fixes for back button. Added additional text for ARRIVE (and tweaked CSS sizing). Added extra template text. Restructured results.

--- a/question10.html
+++ b/question10.html
@@ -3,7 +3,7 @@ layout: wizard
 information: start-information.html
 action: question-action.html
 title: Tell us about your work
-yesResult: remark
+yesResult: resultRemark
 noResult: question11
 prevResult: question9
 ---
