--- a/question3.html
+++ b/question3.html
@@ -3,8 +3,8 @@ layout: wizard
 information: start-information.html
 action: question-action.html
 title: Tell us about your work
-yesResult: moose
-noResult: prisma
+yesResult: resultMoose
+noResult: resultPrisma
 prevResult: question2
 ---
 <p>Is it a review of observational (cohort, case-control, or cross-sectional) studies?</p>
