--- a/question4.html
+++ b/question4.html
@@ -3,8 +3,8 @@ layout: wizard
 information: start-information.html
 action: question-action.html
 title: Tell us about your work
-yesResult: arrive
-noResult: library4
+yesResult: resultArrive
+noResult: resultLibrary4
 prevResult: question0
 ---
 <p>Was your research on animals in the lab?</p>
