--- a/question5.html
+++ b/question5.html
@@ -3,7 +3,7 @@ layout: wizard
 information: start-information.html
 action: question-action.html
 title: Tell us about your work
-yesResult: entreq
+yesResult: resultEntreq
 noResult: question6
 prevResult: question1
 ---
