--- a/question6.html
+++ b/question6.html
@@ -3,8 +3,8 @@ layout: wizard
 information: start-information.html
 action: question-action.html
 title: Tell us about your work
-yesResult: care
-noResult: srqr
+yesResult: resultCare
+noResult: resultSrqr
 prevResult: question5
 ---
 <p>Did you study a clinical case, or series of cases?</p>
