--- a/question9.html
+++ b/question9.html
@@ -3,7 +3,7 @@ layout: wizard
 information: start-information.html
 action: question-action.html
 title: Tell us about your work
-yesResult: stard
+yesResult: resultStard
 noResult: question10
 prevResult: question8
 ---
