--- a/resultArrive.html
+++ b/resultArrive.html
@@ -5,8 +5,9 @@ action: answer-action.html
 title: The ARRIVE guidelines will be most useful to you
 checkList: ARRIVE
 additional: If you conducted veterinary research, or research on livestock rather than comparative research on laboratory animals, the ARRIVE guidelines may not be applicable.
+expertsIn: comparative research involving laboratory animals
 checkListLink: http://www.nc3rs.org.uk/arrive-guidelines
 moreInfoLink: http://www.equator-network.org/reporting-guidelines/improving-bioscience-research-reporting-the-arrive-guidelines-for-reporting-animal-research/
-prevResult: question3
+prevResult: question4
 ---
 <p>You may still find useful guidelines by searching the full EQUATOR library which covers 250+ study designs.</p>
