--- a/resultMoose.html
+++ b/resultMoose.html
@@ -4,6 +4,7 @@ information: answer-information.html
 action: answer-action.html
 title: The MOOSE guidelines will be most useful to you
 checkList: MOOSE
+expertsIn: reviews and meta-analyses of observational studies
 checkListLink: http://www.equator-network.org/reporting-guidelines/meta-analysis-of-observational-studies-in-epidemiology-a-proposal-for-reporting-meta-analysis-of-observational-studies-in-epidemiology-moose-group/
 moreInfoLink: http://www.equator-network.org/reporting-guidelines/meta-analysis-of-observational-studies-in-epidemiology-a-proposal-for-reporting-meta-analysis-of-observational-studies-in-epidemiology-moose-group/
 extensionsLink:
