--- a/resultSrqr.html
+++ b/resultSrqr.html
@@ -4,8 +4,9 @@ information: answer-information.html
 action: answer-action.html
 title: The SRQR guidelines will be most useful to you
 checkList: SRQR
+expertsIn: qualitative research
 checkListLink: http://www.equator-network.org/reporting-guidelines/srqr/
 moreInfoLink: http://www.equator-network.org/reporting-guidelines/srqr/
-prevResult: question3
+prevResult: question6
 ---
 <p>You may still find useful guidelines by searching the full EQUATOR library which covers 250+ study designs.</p>
