--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: EQUATOR Network Guideline Flowchart
       <h1>EQUATOR Wizard</h1>
       <p>This tool helps researchers identify and download reporting checklists applicable to their work. Built in collaboration with the EQUATOR network, it covers the most common research paradigms and can be embedded, for free, into any website. We will expand it over time and keep it updated with the latest checklist versions.</p>
       <p>If you would like to embed the tool into your own website, or if you have any other feedback, please email <a href='mailto://{{ site.email }}'>{{ site.email }}</a>.</p>
-      <iframe src="{{ "main.html" | prepend: site.baseurl }}">Your browser does not seem to handle frames properly, please click <a href='/equatorNew.html' target='_blank'>here</a> to try in a separate tab.</iframe>
+      <iframe src="{{ "main.html" | prepend: site.baseurl }}">Your browser does not seem to handle frames properly, please click <a href='{{ "main.html" | prepend: site.baseurl }}' target='_blank'>here</a> to try in a separate tab.</iframe>
     </div>
   </div>
 </div>
