--- a/question11.html
+++ b/question11.html
@@ -3,8 +3,8 @@ layout: wizard
 information: start-information.html
 action: question-action.html
 title: Tell us about your work
-yesResult: tripod
-noResult: library11
+yesResult: resultTripod
+noResult: resultLibrary11
 prevResult: question10
 ---
 <p>Did the research develop, validate or update a general prediction model for diagnosis or prognosis?</p>
