--- a/question7.html
+++ b/question7.html
@@ -3,7 +3,7 @@ layout: wizard
 information: start-information.html
 action: question-action.html
 title: Tell us about your work
-yesResult: consort
+yesResult: resultConsort
 noResult: question8
 prevResult: question2
 ---
