--- a/question8.html
+++ b/question8.html
@@ -3,7 +3,7 @@ layout: wizard
 information: start-information.html
 action: question-action.html
 title: Tell us about your work
-yesResult: strobe
+yesResult: resultStrobe
 noResult: question9
 prevResult: question7
 ---
