--- a/resultCare.html
+++ b/resultCare.html
@@ -4,8 +4,9 @@ information: answer-information.html
 action: answer-action.html
 title: The CARE guidelines will be most useful to you
 checkList: CARE
+expertsIn: clinical case reports and case series
 checkListLink: http://www.care-statement.org/downloads/CAREchecklist-English.docx
 moreInfoLink: http://www.equator-network.org/reporting-guidelines/care/
-prevResult: question3
+prevResult: question6
 ---
 <p>You may still find useful guidelines by searching the full EQUATOR library which covers 250+ study designs.</p>
