--- a/resultEntreq.html
+++ b/resultEntreq.html
@@ -4,8 +4,9 @@ information: answer-information.html
 action: answer-action.html
 title: The ENTREQ guidelines will be most useful to you
 checkList: ENTREQ
+expertsIn: the synthesis of qualitative research
 checkListLink: http://www.equator-network.org/reporting-guidelines/entreq/
 moreInfoLink: http://www.equator-network.org/reporting-guidelines/entreq/
-prevResult: question3
+prevResult: question5
 ---
 <p>You may still find useful guidelines by searching the full EQUATOR library which covers 250+ study designs.</p>
