--- a/resultRemark.html
+++ b/resultRemark.html
@@ -4,8 +4,9 @@ information: answer-information.html
 action: answer-action.html
 title: The REMARK guidelines will be most useful to you
 checkList: REMARK
+expertsIn: prognostic modelling studies using biomarkers
 checkListLink: http://www.equator-network.org/reporting-guidelines/reporting-recommendations-for-tumour-marker-prognostic-studies-remark/
 moreInfoLink: http://www.equator-network.org/reporting-guidelines/reporting-recommendations-for-tumour-marker-prognostic-studies-remark/
-prevResult: question3
+prevResult: question10
 ---
 <p>You may still find useful guidelines by searching the full EQUATOR library which covers 250+ study designs.</p>
