--- a/resultTripod.html
+++ b/resultTripod.html
@@ -4,8 +4,9 @@ information: answer-information.html
 action: answer-action.html
 title: The TRIPOD guidelines will be most useful to you
 checkList: TRIPOD
+expertsIn: prediction modelling studies for prognosis or diagnosis
 checkListLink: http://www.tripod-statement.org/Portals/0/Documents/TRIPOD/Tripod%20checklist/Checklist_v2_090215.docx
 moreInfoLink: http://www.equator-network.org/reporting-guidelines/tripod-statement/
-prevResult: question3
+prevResult: question11
 ---
 <p>You may still find useful guidelines by searching the full EQUATOR library which covers 250+ study designs.</p>
